fix font-size and align

--- a/src/css/testimonials.css
+++ b/src/css/testimonials.css
@@ -33,7 +33,7 @@
   color: #fcf9f9;
 }
 
-.testimonials-txt {
+.testimonial-txt {
   color: rgba(252, 249, 249, 0.4);
   text-align: center;
   font-size: 14px;
@@ -56,7 +56,7 @@
     display: none;
   }
 
-  .testimonials-txt {
+  .testimonial-txt {
     font-size: 16px;
   }
 }
